Update core libs: kotlin -> 2.3, compose -> 1.9